fix image cropping issues

--- a/frontend/src/components/Page_home/SpotCard.css
+++ b/frontend/src/components/Page_home/SpotCard.css
@@ -8,13 +8,17 @@
     display: block;
 }
 
-.previewImage {
+.image-container {
     width: 100%;
-    border-radius: 1rem;
+    position: relative;
+    aspect-ratio: 1 / 1;
 }
 
-.previewImage::after {
-    padding-top: 100%;
+.previewImage {
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem;
+    object-fit: cover;
 }
 
 .loc-rating {
