--- a/frontend/src/components/Page_spotDetails/SpotDetailsPage.css
+++ b/frontend/src/components/Page_spotDetails/SpotDetailsPage.css
@@ -31,12 +31,14 @@
     height: 100%;
     width: 100%;
     border-radius: 30px 0 0 30px;
+    object-fit: cover;
 }
 
 .spot-details-image-2 {
     grid-area: two;
     height: 100%;
     width: 100%;
+    object-fit: cover;
 }
 
 .spot-details-image-3 {
@@ -44,12 +46,14 @@
     height: 100%;
     width: 100%;
     border-radius: 0 30px 0 0;
+    object-fit: cover;
 }
 
 .spot-details-image-4 {
     grid-area: four;
     height: 100%;
     width: 100%;
+    object-fit: cover;
 }
 
 .spot-details-image-5 {
@@ -57,6 +61,7 @@
     height: 100%;
     width: 100%;
     border-radius: 0 0 30px 0;
+    object-fit: cover;
 }
 
 .spot-details-description {
